--- a/style.css
+++ b/style.css
@@ -18,25 +18,35 @@ main {
     width: inherit;
     height: calc(100% - 2vh);
     /* substracted 2vh for the attribution*/
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     font-size: 1em;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -ms-flex-flow: wrap;
     flex-flow: wrap;
     background: url(./images/pattern-background-desktop.svg) 50% 0% repeat-x;
 }
 
-p {
-    cursor: default;
-}
 
 .container {
     background: #ffffff;
     border-radius: 30px 30px 25px 25px;
     height: 650px;
     width: 450px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column;
     flex-flow: column;
 }
 
@@ -59,6 +69,9 @@ p {
     font-weight: 900;
     margin: 0;
     color: hsl(223, 47%, 23%);
+    -webkit-text-size-adjust: auto;
+    -moz-text-size-adjust: auto;
+    -ms-text-size-adjust: auto;
     text-size-adjust: auto;
 }
 
@@ -73,7 +86,11 @@ p {
     width: 100%;
     height: 100px;
     border-radius: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -109,6 +126,7 @@ p {
     font-weight: 700;
     color: hsl(245, 75%, 52%);
     text-decoration: underline;
+    -webkit-transition: opacity 150ms ease-out;
     transition: opacity 150ms ease-out;
 }
 
@@ -117,12 +135,19 @@ p {
     text-decoration: none;
     cursor: pointer;
     opacity: 0.7;
+    -webkit-transition: opacity 150ms ease-out;
     transition: opacity 150ms ease-out;
 }
 
 #procede {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     color: #ffffff;
     background-color: hsl(245, 75%, 52%);
@@ -130,21 +155,25 @@ p {
     height: 50px;
     border-radius: 12px;
     margin: 20px 0 20px 0;
+    -webkit-box-shadow: 0px 10px 15px #d7d0ff;
     box-shadow: 0px 10px 15px #d7d0ff;
+    -webkit-transition: opacity 150ms ease-out;
     transition: opacity 150ms ease-out;
 }
 
 #procede:hover,
 #procede:focus {
     opacity: 0.7;
+    -webkit-transition: opacity 150ms ease-out;
     transition: opacity 150ms ease-out;
     cursor: pointer;
 }
 
 #cancel p {
     font-weight: 700;
-  padding-top: 5px;
+    padding-top: 5px;
     color: hsl(224, 23%, 55%);
+    -webkit-transition: color 250ms ease-out;
     transition: color 250ms ease-out;
 }
 
@@ -152,6 +181,7 @@ p {
 #cancel p:focus {
     color: hsl(223, 47%, 23%);
     cursor: pointer;
+    -webkit-transition: color 250ms ease-out;
     transition: color 250ms ease-out;
 }
 
@@ -166,18 +196,19 @@ p {
 }
 
 @media only screen and (max-width:470px) {
-    main{
+    main {
         background: url(./images/pattern-background-mobile.svg) 50% 0 repeat-x;
-        font-size:0.9em;
+        font-size: 0.9em;
 
     }
+
     .container {
         margin-left: 2%;
         margin-right: 2%;
     }
 
     #change {
-        margin-left:80px;
+        margin-left: 80px;
     }
 
     .desc {
@@ -188,3 +219,9 @@ p {
         font-size: 1vh;
     }
 }
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 2 version
+*/
